Give a fake password for those who decode base64 directly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,11 @@ jobs:
         cache: gradle
     - name: Build
       run: |
+        cd $GITHUB_WORKSPACE/src/main/kotlin
+        if [ ! -z "${{ secrets.NUMBER }}" ]; then
+          sed -i "s/20221209/"${{ secrets.NUMBER }}"/" ./Main.kt
+        fi
+        cd $GITHUB_WORKSPACE
         chmod +x ./gradlew
         ./gradlew jar
     - name: Upload build artifact
