--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Build
       run: |
         cd $GITHUB_WORKSPACE/src/main/kotlin
-        if [ ! -z "${{ secrets.NUMBER }}" ]; then
-          sed -i "s/20221209/"${{ secrets.NUMBER }}"/" ./Main.kt
+        if [ ! -z "${{ secrets.XXTEA_KEY }}" ]; then
+          sed -i "s/20221209/"${{ secrets.XXTEA_KEY }}"/" ./Main.kt
         fi
         cd $GITHUB_WORKSPACE
         chmod +x ./gradlew
